--- a/notes.org
+++ b/notes.org
@@ -1,9 +1,19 @@
-* Database Implications
+* Database
+** General
 - It was initially envisaged that there would be two distinct
   entities, the *Brand* and the *Influencer*, and they would have very
   different goals. Through surveying brands and influencers, they are
   more homogenous and their goals are not so divided. Thus, at this
   stage, the User model was created, rather than a Brand model and an
   Influencer model.
+** Long-term Considerations
 - Polymorphism will be useful for the social media accounts - however,
-  time is of the essence in a hackathon, so at the moment they are not connected.
+  time is of the essence in a hackathon, so at the moment they are not
+  connected.
+- A User may have multiple social accounts on the one platform - this
+  will have to be considered down the track.
+- Considering our userbase, will look into authentication for social media accounts. 
+* Instagram Notes
+- Instagram API: https://instagram.com/developer/
+- [ ] Instagram Authentication Integration
+- 
